--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -15,7 +15,7 @@ node {
         }
     }
     stage('docker build/push') {
-        docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+        docker.withRegistry('https://index.docker.io', 'dockerhub') {
             def app = docker.build("boploi/jenkinsfile_docker_nodesjs_demo:${commit-id}", '.').push()
         }
     }
