--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -1,24 +1,22 @@
 node {
-    def commit_id
-    stage('Preparation') {
-        checkout scm
-        sh "git rev-parse --short HEAD > .git/commit-id"
-        commit_id = readFile('.git/commit-id').trim()
-        // trim() remove spaces in front and after of word
-    }
-    stage('test') {
-        nodejs(nodeJSInstallationName: 'nodejs-latest') {
-            sh 'npm install --only=dev'
-            // install only development package in package.json
-            sh 'npm test'
-            // execute test/test.js
-        }
-    }
-    stage('docker build/push') {
-        docker.withServer('tcp://103.56.156.20:2375') {
-            docker.withRegistry('https://index.docker.io', 'dockerhub') {
-                def app = docker.build("boploi/jenkinsfile_docker_nodesjs_demo:${commit-id}", '.').push()
-            }   
-        }
-    }
+   def commit_id
+   stage('Preparation') {
+     checkout scm
+     sh "git rev-parse --short HEAD > .git/commit-id"                        
+     commit_id = readFile('.git/commit-id').trim()
+    // trim() remove spaces in front and after of word
+   }
+   stage('test') {
+     nodejs(nodeJSInstallationName: 'nodejs') {
+       sh 'npm install --only=dev'
+        // install only development package in package.json
+       sh 'npm test'
+        // execute test/test.js
+     }
+   }
+   stage('docker build/push') {
+     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+       def app = docker.build("boploi/jenkinsfile_docker_nodejs_demo:${commit_id}", '.').push()
+     }
+   }
 }
