--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -15,8 +15,10 @@ node {
      }
    }
    stage('docker build/push') {
-     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-       def app = docker.build("boploi/jenkinsfile_docker_nodejs_demo:${commit_id}", '.').push()
-     }
-   }
+       docker.withServer('tcp://103.56.156.20:2375'){
+           docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+                def app = docker.build("boploi/jenkinsfile_docker_nodejs_demo:${commit_id}", '.').push()
+                }
+        }
+    }
 }
