--- a/docker/Jenkinsfile
+++ b/docker/Jenkinsfile
@@ -6,14 +6,17 @@ node {
         commit_id = readFile('.git/commit-id').trim()
     }
     stage('test') {
+        docker.withServer('tcp://103.56.156.20:2375'){
         def myTestContainer = docker.image('node:4.6')
         myTestContainer.pull()
         myTestContainer.inside {
             sh 'npm install --ony=dev'
             sh 'npm test'
         }
+        }
     }
     stage('test with DB') {
+        docker.withServer('tcp://103.56.156.20:2375'){
         def mysql = docker.image('mysql').run("-e MYSQL_ALLOW_EMPTY_PASSWORD=yes")
         def myTestContainer = docker.image('node:7.10')
         myTestContainer.pull()
@@ -21,12 +24,15 @@ node {
             // using linking, mysql will be available at host: mysql, port: 3306
             sh 'npm install --only=dev'
             sh 'npm test'
+            }
         }
         mysql.stop()
     }
     stage('docker build/push') {
-        docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
-            def app = docker.build("boploi/jenkinsfile_docker_nodejs_demo:${commit_id}", '.').push()
+        docker.withServer('tcp://103.56.156.20:2375'){
+            docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+                def app = docker.build("boploi/jenkinsfile_docker_nodejs_demo:${commit_id}", '.').push()
+                }
         }
     }
 }
