--- a/docker/Jenkinsfile
+++ b/docker/Jenkinsfile
@@ -10,7 +10,7 @@ node {
         def myTestContainer = docker.image('node:4.6')
         myTestContainer.pull()
         myTestContainer.inside {
-            sh 'npm install --ony=dev'
+            sh 'npm install --ony=dev --unsafe-perm=true --allow root'
             sh 'npm test'
         }
         }
@@ -22,7 +22,7 @@ node {
         myTestContainer.pull()
         myTestContainer.inside("--link ${mysql.id}:mysql") {
             // using linking, mysql will be available at host: mysql, port: 3306
-            sh 'npm install --only=dev'
+            sh 'npm install --only=dev --unsafe-perm=true --allow root'
             sh 'npm test'
             }
         }
