--- a/docker/Jenkinsfile
+++ b/docker/Jenkinsfile
@@ -10,8 +10,8 @@ node {
         def myTestContainer = docker.image('node:4.6')
         myTestContainer.pull()
         myTestContainer.inside {
-            sh 'sudo npm install --ony=dev --unsafe-perm=true --allow root'
-            sh 'sudo npm test'
+            sh 'npm install --ony=dev --unsafe-perm=true --allow root'
+            sh 'npm test'
         }
         }
     }
@@ -22,8 +22,8 @@ node {
         myTestContainer.pull()
         myTestContainer.inside("--link ${mysql.id}:mysql") {
             // using linking, mysql will be available at host: mysql, port: 3306
-            sh 'sudo npm install --only=dev --unsafe-perm=true --allow root'
-            sh 'sudo npm test'
+            sh 'npm install --only=dev --unsafe-perm=true --allow root'
+            sh 'npm test'
             }
         }
         mysql.stop()
